bug: placeholders obscured on mobile view - removed form padding

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -195,6 +195,9 @@ a:hover {
     border-radius: 0;
 }
 
+.form-control {
+    padding: 0 !important;  
+}
 
 /* footer */
 
